# e-commerce

./: PROJECT_STRUCTURE.md  README.md  TODO.md  docker-compose.yml
auth_service/: .env.example  Dockerfile  entrypoint.sh  package-lock.json  package.json
auth_service/docker/: Dockerfile  entrypoint.sh
auth_service/prisma/: schema.prisma
auth_service/src/: constants.js  main.js  middlewares.js  utils.js
auth_service/src/v1/: route.js  (+2 more)
docs/: e-commerce.postman_collection.json  main.http
product_service/: package.json
product_service/docker/: Dockerfile  entrypoint.sh
product_service/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.repository.ts  app.service.ts
reverse_proxy/: nginx.conf  proxy.conf
shop_service/: hello.py  pyproject.toml
shop_service/docker/: Dockerfile  entrypoint.sh  init-db.sh
shop_service/src/: .env.example  containers.py  database.py  main.py
shop_service/src/middleware/: auth.py  error.py
shop_service/src/models/: base.py  shop.py
shop_service/src/repository/: shop.py
shop_service/src/request/: create_shop.py  shop_request.py  update_shop.py
shop_service/src/response/: shop_response.py
shop_service/src/routers/: shop.py
shop_service/src/service/: shop.py
user_service/: .env.example  Dockerfile  composer.json  entrypoint.sh  package-lock.json  package.json
user_service/bootstrap/: app.php
user_service/docker/: Dockerfile  entrypoint.sh  supervisord.conf
user_service/prisma/: schema.prisma
user_service/routes/: api.php
user_service/src/: constants.js  main.js  middlewares.js  utils.js
(+37 files in other folders)
