[project]
name = "shop-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.45.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "motor>=3.7.0",
    "pydantic[email]>=2.10.6",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
